--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
 	--dark: #06f;
 	--light: #ccc;
@@ -20,29 +24,8 @@ html {
 }
 
 body {
-	font-family: sans-serif;
-	font-size: 1rem;
-}
-
-header h1, main, footer {
-	margin: 20px;
-}
-
-p {
-	margin: 20px 0;
-}
-
-h1 {
-	font-weight: normal;
-}
-
-nav ul {
-	list-style-type: none;
-}
-
-nav ul li {
-	display: inline;
-	margin-left: 20px;
+	height: 100vh;
+	width: 100vw;
 }
 
 table {
