--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -563,36 +563,20 @@ video {
   display: none;
 }
 
-.h-\[100vh\] {
-  height: 100vh;
-}
-
-.h-\[100vh-60px\] {
-  height: 100vh-60px;
-}
-
-.h-\[calc\(100vh_-_60px\)\] {
-  height: calc(100vh - 60px);
+.h-full {
+  height: 100%;
 }
 
 .h-\[60px\] {
   height: 60px;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-\[full\] {
-  width: full;
+.h-\[calc\(100vh_-_60px\)\] {
+  height: calc(100vh - 60px);
 }
 
 .w-\[100vw\] {
   width: 100vw;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
 }
 
 .items-center {
@@ -609,6 +593,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
 }
 
 .bg-slate-100 {
@@ -711,13 +699,96 @@ form > button {
   margin-top: 20px;
 }
 
-footer {
-  border-top: 1px solid var(--light);
-  font-size: .9rem;
+.calendar-wrp {
+  display: flex;
+  gap: 0.75rem;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
 }
 
-footer > p {
-  margin: 10px 0;
+.calendar-item {
+  width: 300px;
+  display: inline-block;
+  vertical-align: top;
+  font: 14px/1.2 Arial, sans-serif;
+}
+
+.calendar-head {
+  text-align: center;
+  padding: 5px;
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.calendar-item table {
+  border-collapse: collapse;
+  border: none;
+  width: 100%;
+}
+
+.calendar-item th {
+  font-size: 12px;
+  padding: 6px 7px;
+  text-align: center;
+  color: #888;
+  font-weight: normal;
+}
+
+.calendar-item td {
+  font-size: 13px;
+  padding: 6px 5px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+.calendar-item tr th:nth-child(6), .calendar-item tr th:nth-child(7),
+.calendar-item tr td:nth-child(6), .calendar-item tr td:nth-child(7)  {
+  color: #e65a5a;
+}
+
+.calendar-day.last {
+  color: #999 !important;
+}
+
+.calendar-day.today {
+  font-weight: bold;
+}
+
+.calendar-day.event {
+  background: #ffe2ad;
+  position: relative;
+  cursor: pointer;
+}
+
+.calendar-day.event:hover .calendar-popup {
+  display: block;
+}
+
+.calendar-popup {
+  display: none;
+  position: absolute;
+  top: 40px;
+  left: 0;
+  min-width: 200px;
+  padding: 15px;
+  background: #fff;
+  text-align: left;
+  font-size: 13px;
+  z-index: 100;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  color: #000;
+}
+
+.calendar-popup:before {
+  content: "";
+  border: solid transparent;
+  position: absolute;
+  left: 8px;
+  bottom: 100%;
+  border-bottom-color: #fff;
+  border-width: 9px;
+  margin-left: 0;
 }
 
 /**
